--- a/employeemanager/src/main/resources/application.properties
+++ b/employeemanager/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.application.name=employeemanager
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration 
